8301562: [Lilliput] Runtime flag to enable Lilliput
Co-authored-by: Thomas Stuefe <stuefe@openjdk.org>
Reviewed-by: stuefe