@@ -297,6 +297,6 @@ public class TestMetaspacePerfCounters {
     }
 
     private static boolean isUsingCompressedClassPointers() {
-        return Platform.is64bit();
+        return Platform.is64bit() && !InputArguments.contains("-XX:-UseCompressedClassPointers") && !InputArguments.contains("-XX:-UseCompactObjectHeaders");
     }
 }
